# ml_application_documents

./: .gitignore  README.md  analyzing_PLN_data.ipynb  main.py  planning.ipynb  processing_PLN_data.ipynb  pyproject.toml  requirements.txt
data_preprocessing/: delete_unused_data_pln.ipynb  pln_add_title_page.ipynb  pln_data_preprocessing.py  pln_delete_unused_data.ipynb  pln_mini_batch.ipynb  pln_title_df.ipynb
eda/: eda_pln.ipynb
image_preprocessing/: pln_image_downscaling.ipynb  pln_image_konverting.py
model_training_mini_batch/: exploratory_model_training.ipynb  pln_exploratory_model_training.ipynb  pln_exploratory_model_training_knc.ipynb  pln_exploratory_model_training_rfc.ipynb  pln_observation_prediction_knc_rfc.ipynb
pln_model_training_scripts/: pln_first_page_model_128x128.py  pln_first_page_model_128x128_pca.py
report/: Report_Classification_of_Title_page.html  Report_Classification_of_Title_page_english.qmd  Report_Classification_of_Title_page_swedish.qmd
report/Report_Classification_of_Title_page_files/libs/bootstrap/: bootstrap-c36fa1659e66718328add8225e5b94d5.min.css
to_report/: visualizations.ipynb
